--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,15 @@
         <div class="container cards-port">
           <ul class="pages-portfolio">
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/registration.jpg" width="360" alt="Login form">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/registration.jpg" width="360" alt="Login form">                 
+                  <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
                 <div class="our-offers">
                   <h2 class="title-list">Banking App Interface Concept</h2>
                 <p class="paragraf-text-portfolio">All</p>
@@ -57,15 +65,31 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/smartphones.jpg" width="360" alt="Smartphone">
-                <div class="our-offers">
+                <a class="img-portfolio" href="">
+                  <div class="hidden-div">
+                    <img src="./images/portfolio/smartphones.jpg" width="360" alt="Smartphone">
+                    <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                  </div>
+                  <div class="our-offers">
                   <h2 class="title-list">Cashless Payment</h2>
                 <p class="paragraf-text-portfolio">Marketing</p>
                 </div>
               </a>
-          </li>
+            </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/laptop.jpg" width="360" alt="laptop">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/laptop.jpg" width="360" alt="laptop">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
                 <div class="our-offers">
                   <h2 class="title-list">Meditaion</h2>
                 <p class="paragraf-text-portfolio">App</p>
@@ -73,7 +97,15 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/helm.jpg" width="360" alt="Helm">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/helm.jpg" width="360" alt="Helm">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
                 <div class="our-offers">
                   <h2 class="title-list">Taxi Service</h2>
                 <p class="paragraf-text-portfolio">Marketing</p>
@@ -81,7 +113,15 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/topic.jpg" width="360" alt="Topic">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/topic.jpg" width="360" alt="Topic">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
                 <div class="our-offers">
                   <h2 class="title-list">Screen Illustrations</h2>
                 <p class="paragraf-text-portfolio">Design</p>
@@ -89,7 +129,15 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/girl.jpg" width="360" alt="Girl">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/girl.jpg" width="360" alt="Girl">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
                 <div class="our-offers">
                   <h2 class="title-list">Online Courses</h2>
                 <p class="paragraf-text-portfolio">Marketing</p>
@@ -97,24 +145,48 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/presentation.jpg" width="360" alt="Presentation">
-              <div class="our-offers">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/presentation.jpg" width="360" alt="Presentation">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
+                <div class="our-offers">
                 <h2 class="title-list">Instagram Stories Concept</h2>
               <p class="paragraf-text-portfolio">Design</p>
               </div>
             </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/vegetables.jpg" width="360" alt="Vegetables">
-              <div class="our-offers">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/vegetables.jpg" width="360" alt="Vegetables">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
+                <div class="our-offers">
                 <h2 class="title-list">Organic Food</h2>
               <p class="paragraf-text-portfolio">Web Site</p>
               </div>
             </a>
             </li>
             <li class="portfolio-item">
-              <a class="img-portfolio" href=""><img src="./images/portfolio/cappuccino.jpg" width="360" alt="Cappuccino">
-              <div class="our-offers">
+              <a class="img-portfolio" href="">
+                <div class="hidden-div">
+                  <img src="./images/portfolio/cappuccino.jpg" width="360" alt="Cappuccino">
+                <div class="hidden-text">
+                    <p class="slide">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                  </div>
+                </div>
+                <div class="our-offers">
                 <h2 class="title-list">Fresh Coffee</h2>
               <p class="paragraf-text-portfolio">Web Site</p>
               </div>
