--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav class="nav-pages">
           <a href="" class="top-web-studio"><span class="top-web">Web</span>Studio</a>
           <ul class="menu">
-            <li class="menu-item"><a class="menu-link-webstudio studio-portfolio" href="./index.html" >Studio</a></li>
-            <li class="menu-item"><a class="menu-link-webstudio" href="./portfolio.html" >Portfolio</a></li>
-            <li class="menu-item"><a class="menu-link-webstudio" href="">Contacts</a></li>
+            <li class="menu-item"><a class="menu-link-webstudio studio-color studio-portfolio" href="./index.html" >Studio</a></li>
+            <li class="menu-item"><a class="menu-link-webstudio studio-web-portfolio-hidden" href="./portfolio.html" >Portfolio</a></li>
+            <li class="menu-item"><a class="menu-link-webstudio studio-web-contacts-hidden" href="">Contacts</a></li>
           </ul>
         </nav>
         <ul class="contacts-menu">
