--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,10 @@
         <nav class="nav-pages">
           <a href="" class="top-web-studio"><span class="top-web">Web</span>Studio</a>
           <ul class="menu">
-            <li class="menu-item"><a class="menu-link-portfolio" href="./index.html" >Studio</a></li>
-            <li class="menu-item"><a class="menu-link-portfolio portfolio-studio" href="./portfolio.html" >Portfolio</a></li>
-            <li class="menu-item"><a class="menu-link-portfolio" href="">Contacts</a></li>
+            <li class="menu-item"><a class="menu-link-portfolio portfolio-hidden" href="./index.html" >Studio</a></li>
+            <li class="menu-item"><a class="menu-link-portfolio portfolio-color portfolio-studio" href="./portfolio.html" >Portfolio</a></li>
+            <li class="menu-item"><a class="menu-link-portfolio portfolio-contacts" href="">Contacts</a></li>
+          
           </ul>
         </nav>
         <ul class="contacts-menu">
