--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <img src="./images/webstudio/product.jpg" width="264" alt="фото чоловіка 1">
               <div class="footer-cards">
                 <h3 class="title-list">Mark Guerrero</h3>
-              <p class="paragraf-text">Product Designer</p>
+              <p class="paragraf-text paragraf-our-team">Product Designer</p>
               <ul class="social-list">
                 <li>
                   <a href="" class="social-link">
@@ -153,7 +153,7 @@
               <img src="./images/webstudio/fаrontend.jpg" width="264" alt="фото чоловіка 2">
              <div class="footer-cards">
               <h3 class="title-list">Tom Ford</h3>
-              <p class="paragraf-text">Frontend Developer</p>
+              <p class="paragraf-text paragraf-our-team">Frontend Developer</p>
               <ul class="social-list">
                 <li>
                   <a href="" class="social-link">
@@ -190,7 +190,7 @@
               <img src="./images/webstudio/marketing.jpg" width="264" alt="фото жінки">
               <div class="footer-cards">
                 <h3 class="title-list">Camila Garcia</h3>
-              <p class="paragraf-text">Marketing</p>
+              <p class="paragraf-text paragraf-our-team">Marketing</p>
               <ul class="social-list">
                 <li>
                   <a href="" class="social-link">
@@ -227,7 +227,7 @@
               <img src="./images/webstudio/ul.jpg" width="264" alt="фото чоловіка 3">
               <div class="footer-cards">
                 <h3 class="title-list">Daniel Wilson</h3>
-              <p class="paragraf-text">UI Designer</p>
+              <p class="paragraf-text paragraf-our-team">UI Designer</p>
               <ul class="social-list">
                 <li>
                   <a href="" class="social-link">
